--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,9 @@
   --tc-secondary: #787282;
   --c-alter: #3f41a6;
   --bgc-secondary-o35: #f9f9fc59;
+  --bgc-secondary: #f4f5f9;
   --bsc-primary-o25: #00000040;
+  --bsc-primary-o15: #00000026;
 }
 
 * {
@@ -22,6 +24,7 @@ body {
   font-family: 'Poppins', sans-serif;
   max-width: 1440px;
   margin: auto;
+  color: var(--tc-primary);
 }
 
 .header,
@@ -185,13 +188,13 @@ button {
   flex-direction: column;
 }
 
-.about-title {
+.about-subtitle {
   color: var(--c-alter);
   font-size: 20px;
   font-weight: var(--fw-semibold);
 }
 
-.about-subtitle {
+.about-title {
   font-size: 48px;
   font-weight: var(--fw-bold);
   line-height: 1.25;
@@ -243,4 +246,102 @@ button {
 
 .cualities-description {
   text-align: center;
+}
+
+.projects-container {
+  width: 740px;
+  height: 550px;
+  border-radius: 20px;
+  box-shadow: 7px 10px 15px 7px var(--bsc-primary-o15);
+  position: relative;
+  left: -120px;
+}
+
+.window-top-bar {
+  background-color: var(--bgc-secondary);
+  height: 50px;
+  border-radius: 20px 20px 0 0;
+}
+
+.window-buttons {
+  display: flex;
+  width: 50px;
+  height: inherit;
+  justify-content: space-between;
+  align-items: center;
+  float: right;
+  padding-right: 40px;
+}
+
+.w-btn-1,
+.w-btn-2,
+.w-btn-3 {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.w-btn-1 {
+  background-color: #f96056;
+}
+
+.w-btn-2 {
+  background-color: #fdbd45;
+}
+
+.w-btn-3 {
+  background-color: #53e546;
+}
+
+.projects-grid {
+  width: 660px;
+  height: 420px;
+  display: grid;
+  grid-template-rows: repeat(2, 200px);
+  grid-template-columns: repeat(4, 150px);
+  grid-gap: 20px;
+  margin: 40px;
+}
+
+.grid-item-1 {
+  grid-column: 1 / span 2;
+}
+
+.grid-item-6 {
+  grid-column: 3 / span 2;
+}
+
+.projects-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.projects-title {
+  font-size: 48px;
+  font-weight: var(--fw-bold);
+  line-height: 1.25;
+  margin-top: 20px;
+}
+
+.projects-description {
+  font-size: 18px;
+  margin: 40px 0;
+}
+
+.projects-measurements {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.measure-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.measure-value {
+    font-size: 40px;
+    font-weight: var(--fw-bold);
+    line-height: 1.25;
 }
