--- a/css/styles.css
+++ b/css/styles.css
@@ -453,8 +453,8 @@ button {
   gap: 20px;
 }
 
-.works-grid-item {
-  border-radius: 20px;
+.works-grid-item img {
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
 .gs-container {
